# forgekits

./: .env.example  .gitignore  CLAUDE.md  README.md  forgekits.bat  pyproject.toml
.dev/: README.md
.dev/backlogs/: BACKLOG.md
.dev/ideas/: senior-protection-layer.md
skills/_base/: anti-patterns.md  error-handling.md  project-structure.md  senior-patterns.md
skills/_meta/: skill-format.md
skills/fastapi/: fastapi-auth.md  fastapi-models.md  fastapi-routes.md  fastapi-setup.md
skills/sqlalchemy/: models.md
src/forgekits/: __init__.py  __main__.py  cli.py  models.py  orchestrator.py
src/forgekits/adapters/: __init__.py  anthropic.py  base.py  claudecode.py  registry.py
src/forgekits/generator/: __init__.py  validator.py  writer.py
src/forgekits/pipeline/: __init__.py  envelope.py  phase.py  runner.py
src/forgekits/router/: __init__.py  classifier.py  model_picker.py
src/forgekits/skills/: __init__.py  loader.py
workspace/: README.md
workspace/scratch/: session-2026-03-24.md  session-2026-03-25.md
